--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,12 +1,26 @@
+#spring:
+#  application:
+#    name: jpa
+#  jpa:
+#    show-sql: true
+#    hibernate:
+#      ddl-auto: validate
+#  datasource:
+#    url: jdbc:mysql://localhost:3306/jpa_order?useSSL=false&serverTimezone=UTC
+#    username: root
+#    password: Pa$$w0rd
+#    driver-class-name: com.mysql.cj.jdbc.Driver
 spring:
-  application:
-    name: jpa
-  jpa:
-    show-sql: true
-    hibernate:
-      ddl-auto: validate
   datasource:
-    url: jdbc:mysql://localhost:3306/jpa_order?useSSL=false&serverTimezone=UTC
+    url: jdbc:mysql://localhost:3306/jpa_order?allowPublicKeyRetrieval=true&useSSL=false
     username: root
     password: Pa$$w0rd
     driver-class-name: com.mysql.cj.jdbc.Driver
+
+  jpa:
+    hibernate:
+      ddl-auto: update
+    show-sql: true
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.MySQL8Dialect
